[gd_scene load_steps=27 format=2]

[ext_resource path="res://resources/IMG_0093.jpeg" type="Texture" id=1]
[ext_resource path="res://scripts/Rocket.gd" type="Script" id=2]
[ext_resource path="res://resources/rocket.png" type="Texture" id=3]
[ext_resource path="res://resources/flame.png" type="Texture" id=4]
[ext_resource path="res://scripts/LandingPad.gd" type="Script" id=5]
[ext_resource path="res://resources/pad.png" type="Texture" id=6]
[ext_resource path="res://resources/Calibri.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=8]
[ext_resource path="res://scripts/GameResult.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110.401, 0.149632 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.86613, 395.938 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.91522, 394.206 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 694.727, 2.79388 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 132.098, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21.1017, 10.2215 )

[sub_resource type="Animation" id=7]
resource_name = "FlameAnimation"
length = 1.18
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 5, 3 ]
}

[sub_resource type="Animation" id=18]
resource_name = "FlameAnimation"
length = 1.18
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 5, 3 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3.47154, 0.00073947 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=15]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=16]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=17]
size = 18
use_filter = true
font_data = ExtResource( 7 )

[node name="Game" type="Node"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -3

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 700.593, 400.01 )
scale = Vector2( 0.728972, 0.740661 )
texture = ExtResource( 1 )

[node name="World" type="CanvasLayer" parent="."]

[node name="Boundaries" type="Node2D" parent="World"]
editor/display_folded = true

[node name="BottomBoundary" type="StaticBody2D" parent="World/Boundaries"]
editor/display_folded = true
visible = false
position = Vector2( 0.74826, 793.51 )
scale = Vector2( 2.77951, 9.38659 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Boundaries/BottomBoundary"]
position = Vector2( 251.696, 1.09499 )
scale = Vector2( 2.27942, -2.65713 )
shape = SubResource( 1 )

[node name="LeftBoundary" type="StaticBody2D" parent="World/Boundaries"]
editor/display_folded = true
visible = false
position = Vector2( -0.854096, 3.77542 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Boundaries/LeftBoundary"]
position = Vector2( 3.78822, 399.231 )
shape = SubResource( 2 )

[node name="RightBoundary" type="StaticBody2D" parent="World/Boundaries"]
editor/display_folded = true
visible = false
position = Vector2( 1400.8, -0.102112 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Boundaries/RightBoundary"]
show_behind_parent = true
position = Vector2( -3.8889, 402.518 )
scale = Vector2( 1, 1.00406 )
shape = SubResource( 3 )

[node name="TopBoundary" type="StaticBody2D" parent="World/Boundaries"]
editor/display_folded = true
visible = false
position = Vector2( 1.0055, -3.34116 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Boundaries/TopBoundary"]
position = Vector2( 696.52, 3.92055 )
shape = SubResource( 4 )

[node name="MiddleBoundary" type="StaticBody2D" parent="World/Boundaries"]
editor/display_folded = true
position = Vector2( 698.757, 404.215 )
rotation = -1.57148
scale = Vector2( 3.05396, -0.280064 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Boundaries/MiddleBoundary"]
visible = false
position = Vector2( -0.000244141, 3.86401 )
shape = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="World/Boundaries/MiddleBoundary"]
position = Vector2( 0.141952, -1.42973 )
scale = Vector2( 1.01858, 1.07205 )
points = PoolVector2Array( 132.369, -6.29547, -129.642, -5.11035, -129.641, 14.8445, 132.286, 10.718, 132.27, -11.1599 )
width = 5.0
default_color = Color( 0, 0.976471, 1, 1 )
texture_mode = -1082130432

[node name="Rockets" type="Node2D" parent="World"]

[node name="Rocket" type="RigidBody2D" parent="World/Rockets"]
position = Vector2( 73.5032, 87.7827 )
mass = 0.153061
contacts_reported = 5
contact_monitor = true
script = ExtResource( 2 )

[node name="RocketImage" type="Sprite" parent="World/Rockets/Rocket"]
position = Vector2( -0.389153, 85.1152 )
scale = Vector2( 0.317569, 0.333062 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Rockets/Rocket"]
position = Vector2( -0.644218, 85.0071 )
scale = Vector2( 1.02031, 8.07631 )
shape = SubResource( 6 )

[node name="Flame" type="Sprite" parent="World/Rockets/Rocket"]
editor/display_folded = true
position = Vector2( -0.748016, 177.537 )
texture = ExtResource( 4 )
vframes = 6
frame = 3

[node name="Animation" type="AnimationPlayer" parent="World/Rockets/Rocket/Flame"]
anims/FlameAnimation = SubResource( 7 )

[node name="Rocket2" type="RigidBody2D" parent="World/Rockets"]
position = Vector2( 775.503, 90.7827 )
mass = 0.153061
contacts_reported = 5
contact_monitor = true
script = ExtResource( 2 )

[node name="RocketImage" type="Sprite" parent="World/Rockets/Rocket2"]
position = Vector2( -0.389153, 85.1152 )
scale = Vector2( 0.317569, 0.333062 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Rockets/Rocket2"]
position = Vector2( -0.644218, 85.0071 )
scale = Vector2( 1.02031, 8.07631 )
shape = SubResource( 6 )

[node name="Flame" type="Sprite" parent="World/Rockets/Rocket2"]
editor/display_folded = true
position = Vector2( -0.748016, 177.537 )
texture = ExtResource( 4 )
vframes = 6
frame = 3

[node name="Animation" type="AnimationPlayer" parent="World/Rockets/Rocket2/Flame"]
anims/FlameAnimation = SubResource( 18 )

[node name="LandingPads" type="Node2D" parent="World"]

[node name="LandingPad" type="StaticBody2D" parent="World/LandingPads"]
editor/display_folded = true
position = Vector2( 393.622, 768.206 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="World/LandingPads/LandingPad"]
position = Vector2( -4.1514, 4.88989 )
scale = Vector2( 0.8, 0.56 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/LandingPads/LandingPad"]
visible = false
position = Vector2( -3.83939, 3.92883 )
scale = Vector2( -19.2639, 3129.27 )
shape = SubResource( 9 )

[node name="LandingPad2" type="StaticBody2D" parent="World/LandingPads"]
editor/display_folded = true
position = Vector2( 1095.18, 770.059 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="World/LandingPads/LandingPad2"]
position = Vector2( -4.1514, 4.88989 )
scale = Vector2( 0.8, 0.56 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/LandingPads/LandingPad2"]
visible = false
position = Vector2( -3.83939, 3.92883 )
scale = Vector2( -19.2639, 3129.27 )
shape = SubResource( 9 )

[node name="GameStats" type="Control" parent="World"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FuelLabel1" type="Label" parent="World/GameStats"]
margin_left = 25.0
margin_top = 15.3497
margin_right = 125.0
margin_bottom = 55.3497
custom_fonts/font = SubResource( 10 )
text = "hello"

[node name="FuelLabel2" type="Label" parent="World/GameStats"]
margin_left = 725.0
margin_top = 20.0
margin_right = 825.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 11 )

[node name="Player1Stat" type="Label" parent="World/GameStats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -7.0
margin_right = -280.0
margin_bottom = 7.0
grow_horizontal = 2
custom_fonts/font = SubResource( 12 )
align = 1

[node name="Player2Stat" type="Label" parent="World/GameStats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 300.0
margin_top = -7.0
margin_right = 420.0
margin_bottom = 7.0
grow_horizontal = 2
custom_fonts/font = SubResource( 13 )

[node name="Popups" type="CanvasLayer" parent="."]
layer = 3

[node name="Pause" type="Control" parent="Popups"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="PauseOverlay" type="ColorRect" parent="Popups/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )

[node name="ResumeButton" type="MenuButton" parent="Popups/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -100.0
margin_right = 60.0
margin_bottom = -60.0
text = "Resume"
flat = false

[node name="MenuButton" type="MenuButton" parent="Popups/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 21.0
margin_right = 58.0
margin_bottom = 61.0
text = "Main Menu"
flat = false

[node name="RestartButton" type="MenuButton" parent="Popups/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
text = "Restart"
flat = false

[node name="QuitButton" type="MenuButton" parent="Popups/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 80.0
margin_right = 60.0
margin_bottom = 120.0
text = "Quit"
flat = false

[node name="GameResult" type="Control" parent="Popups"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="ResultOverlay" type="ColorRect" parent="Popups/GameResult"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )

[node name="ResultLabel" type="Label" parent="Popups/GameResult"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -50.0
margin_right = 148.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 14 )
align = 1

[node name="RestartButton" type="MenuButton" parent="Popups/GameResult"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 15 )
text = "Restart"
flat = false

[node name="MainMenuButton" type="MenuButton" parent="Popups/GameResult"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 100.0
margin_right = 60.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 16 )
text = "Main Menu"
flat = false

[node name="QuitButton" type="MenuButton" parent="Popups/GameResult"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 160.0
margin_right = 60.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 17 )
text = "Quit"
flat = false
[connection signal="pressed" from="Popups/Pause/ResumeButton" to="Popups/Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Popups/Pause/MenuButton" to="Popups/Pause" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Popups/Pause/RestartButton" to="Popups/Pause" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Popups/Pause/QuitButton" to="Popups/Pause" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Popups/GameResult/RestartButton" to="Popups/GameResult" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Popups/GameResult/MainMenuButton" to="Popups/GameResult" method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Popups/GameResult/QuitButton" to="Popups/GameResult" method="_on_QuitButton_pressed"]
